感知机分词模型对英文不好，回退到基础模型。 embedding 的 mapper 和keyword 的 mapper 我都退化到使用同一个 n-gram 分词的方式实现，没必要搞那么多花里胡哨